MvcMovie3/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mvcmovie3-deployment
  labels:
    app: mvcmovie3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mvcmovie3
  template:
    metadata:
      labels:
        app: mvcmovie3
    spec:
      containers:
      - name: mvcmovie3
        image: registry.k8s.aspicon.lan/microsoft/mvcmovie3:0.1.1
        ports:
        - containerPort: 80
