MvcMovie3/deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: aspicon-ca-issuer
    kubernetes.io/ingress.class: nginx
  name: mvcmovie3
spec:
  rules:
  - host: mvcmovie3.dev.k8s.aspicon.lan
    http:
      paths:
      - backend:
          serviceName: mvcmovie3
          servicePort: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - mvcmovie3.dev.k8s.aspicon.lan
    secretName: tls-mvcmovie3.dev.k8s.aspicon.lan
